<resources>
    <string name="app_name">Contactos</string>
    <string name="txtv_screen_titulo">Nuevo Contacto</string>
    <string name="etxt_nombre">Nombre Completo</string>
    <string name="etxt_nacimiento">Fecha de Nacimiento</string>
    <string name="etxt_telefono">Telefono</string>
    <string name="etxt_email">E-mail</string>
    <string name="etxt_DescContacto">Descripción del contacto</string>
    <string name="btn_ingresar">Siguiente</string>
    <string name="toast_btn">Ingreso exitoso</string>
    <string name="toast_nombre">Falta ingresar el nombre</string>
    <string name="toast_email">Falta ingresar el correo</string>
    <string name="toast_telefono">Falta ingresar el telefono</string>
    <string name="toast_fecha">Falta ingresar la fecha de nacimiento</string>
    <string name="toast_desc">Falta ingresar la descripción de contacto</string>
    <string name="btn_editar">Editar datos</string>
    <string name="txtv_titulo">Confirmar Datos</string>
</resources>